java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddThrowsClauseHint2-hints.pass
Add throws clause for javax.swing.text.BadLocationException
Surround with try-catch
